# openfabricAI-test

./: .env  README.md  guide.md  ignite.py  llm.py  main.py  memory.py  openfabric.py  openfabric_pysdk-0.3.0-py3-none-any.whl  pyproject.toml  requirements.txt  ui.py
