[tool.poetry]
name = "openfabricAI-test"
version = "1.0"
description = "'An application for demonstrating your skills in AI'"
authors = ["Rockstar"]

[tool.poetry.dependencies]
python = "^3.8"
openfabric-pysdk = {path = "openfabric_pysdk-0.3.0-py3-none-any.whl"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[[tool.poetry.source]]
name = "node2"
url = "https://repo.node2.openfabric.network/index/openfabric-pysdk/openfabric_pysdk-0.3.0-py3-none-any.whl"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
